--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
+# --------------------
+# Python cache files
+# --------------------
+__pycache__/
+*.py[cod]
+*.so
+*.pyo
+*.pyd
+
+# --------------------
+# Environment folders
+# --------------------
+venv/
+.venv/
+env/
+.env
+*.env
+
+# --------------------
+# PyTorch artifacts
+# --------------------
+*.pth
+*.pt
+*.ckpt
+
+# --------------------
+# Output logs and folders
+# --------------------
+outputs/
+runs/              # TensorBoard logs
+wandb/             # Weights & Biases logs
+*.log
+*.tmp
+
+# --------------------
+# Data files (CIFAR-10)
+# --------------------
+data/cifar-10-python.tar.gz
+data/cifar-10-batches-py/
+
+# --------------------
+# Jupyter notebook checkpoints
+# --------------------
+.ipynb_checkpoints/
+
+# --------------------
+# VS Code project settings
+# --------------------
+.vscode/
+
+# --------------------
+# OS-generated files
+# --------------------
+.DS_Store
+Thumbs.db
 
